[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/angy.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://scenes/beam.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 10.5 )

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9.16667, 10.9091 )

[node name="enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
beam_scene = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 3 )

[node name="visionrange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="visionrange"]
scale = Vector2( 10, 1 )
shape = SubResource( 4 )

[node name="hitbox" type="Area2D" parent="."]
scale = Vector2( 1.2, 1 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -0.916667, 0 )
scale = Vector2( 1.1, 1.1 )
shape = SubResource( 5 )

[node name="beamcooldown" type="Timer" parent="."]
process_mode = 0
wait_time = 2.5

[connection signal="body_entered" from="visionrange" to="." method="_on_visionrange_body_entered"]
[connection signal="body_exited" from="visionrange" to="." method="_on_visionrange_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="beamcooldown" to="." method="_on_beamcooldown_timeout"]
